A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Italian, Japanese and Russian translations; thanks to Zabbix translators (Richlv)
....I..... [ZBXNEXT-2056] added an HTTP response code value map (Richlv)
...G...PS. [ZBX-9274] added printing defaults when Zabbix programs are executed with --help option (dimir)

Bug fixes:
...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
...G...... [ZBX-8899] fixed retrieval of sensor readings on Linux 2.6 and higher (gleb, wiper)
...G...... [ZBX-9917] fixed log message when opening windows eventlog (wiper)
.......PS. [ZBX-9855] fixed SNMP dynamic index cache refresh when SNMP OID changes (dimir)
..F....... [ZBX-8820] fixed trimming of new acknowledge messages (Sasha, vitalijs.cemeris)
...G...... [ZBX-9740] improved proc.num for protected Windows processes (gleb)
.......PS. [ZBX-9793] fixed handling of opaque types in SNMP (asaveljevs)
...G...... [ZBX-9847] fixed possible Zabbix agent crash when executing system.cpu.discovery (dimir)
.......PS. [ZBX-9895] fixed memory leak in case of unsupported field type while processing configuration received over proxy protocol (Sandis)
...G...PS. [ZBX-9776] added check for line length when parsing configuration file (asaveljevs, viktors)
...G...... [ZBX-9796] fixed item key vfs.fs.size operation for NetBSD (viktors)
...G...... [ZBXNEXT-494] fixed proc.cpu.util help item description (wiper)
........S. [ZBX-9858] added error message logging when SNMP trapper file size exceeds 2GB (wiper)
.......PS. [ZBX-9666] fixed invalid SNMP dynamic index cache if 2 SNMP agents have the same IP, port and OID (dimir, igors, Sandis)
