@@ -48,14 +48,14 @@ $interfaceTable = (new CTable())
 	]);
 
 // append hosts to form list
-$hostsTweenBox = new CTweenBox($proxyForm, 'proxy_hostids', $data['proxy_hostids']);
+$hosts_tween_box = new CTweenBox($proxyForm, 'proxy_hostids', $data['proxy_hostids']);
 foreach ($data['all_hosts'] as $host) {
 	// show only normal hosts, and discovered hosts monitored by the current proxy
 	// for new proxies display only normal hosts
 	if ($host['flags'] == ZBX_FLAG_DISCOVERY_NORMAL
 			|| ($data['proxyid'] != 0 && bccomp($data['proxyid'], $host['proxy_hostid']) == 0)) {
 
-		$hostsTweenBox->addItem(
+		$hosts_tween_box->addItem(
 			$host['hostid'],
 			$host['name'],
 			null,
@@ -65,7 +65,7 @@ foreach ($data['all_hosts'] as $host) {
 	}
 }
 
-$proxyFormList = (new CFormList('proxyFormList'))
+$proxy_form_list = (new CFormList('proxyFormList'))
 	->addRow(_('Proxy name'),
 		(new CTextBox('host', $data['host'], false, 128))
 			->setWidth(ZBX_TEXTAREA_STANDARD_WIDTH)
@@ -76,13 +76,13 @@ $proxyFormList = (new CFormList('proxyFormList'))
 		HOST_STATUS_PROXY_PASSIVE => _('Passive')
 	]))
 	->addRow(_('Interface'), (new CDiv($interfaceTable))->addClass(ZBX_STYLE_TABLE_FORMS_SEPARATOR))
-	->addRow(_('Hosts'), $hostsTweenBox->get(_('Proxy hosts'), _('Other hosts')))
+	->addRow(_('Hosts'), $hosts_tween_box->get(_('Proxy hosts'), _('Other hosts')))
 	->addRow(_('Description'),
 		(new CTextArea('description', $data['description']))->setWidth(ZBX_TEXTAREA_STANDARD_WIDTH)
 	);
 
 // append tabs to form
-$proxyTab = (new CTabView())->addTab('proxyTab', _('Proxy'), $proxyFormList);
+$proxyTab = (new CTabView())->addTab('proxyTab', _('Proxy'), $proxy_form_list);
 
 // append buttons to form
 $cancelButton = new CRedirectButton(_('Cancel'), 'zabbix.php?action=proxy.list');
